--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="cards">
           <div class="card">
             <img src="images/SKIFSingapore.png" alt="Club Information">
-            <h3><a href="https://www.facebook.com/SKIFSingapore/?ref=page_internal" target="_blank">Club Information</a></h3>
+            <h3><a href="https://www.facebook.com/SKIFSingapore/?ref=page_internal" target="_blank">Club Info</a></h3>
           </div>
 
           <div class="card">
